--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 #datasource
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:59620/railway 
-spring.datasource.username=root
-spring.datasource.password=CFcg51g335HA4b--AfH1h3C5hgb43gCg
+spring.datasource.url=jdbc:mysql://localhost:3306/license?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=user1
+spring.datasource.password=password@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.generate-ddl=true
