--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+server.port= 8087
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/license?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=user1
