--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,14 +1,28 @@
-server.port= 8087
-#datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/license?createDatabaseIfNotExist=true&useSSL=true
+# ==============================
+# Server Configuration
+# ==============================
+server.port=443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=/opt/myapp/keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-alias=myapp
+
+# ==============================
+# Database Configuration
+# ==============================
+spring.datasource.url=jdbc:mysql://localhost:3306/license?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=user1
 spring.datasource.password=password@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.generate-ddl=true
-spring.jpa.show-sql=false
+# ==============================
+# JPA / Hibernate Settings
+# ==============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
 
-
+# ==============================
+# Other Settings
+# ==============================
 spring.main.allow-circular-references=true
