--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,8 +11,8 @@ server.ssl.key-alias=myapp
 # Database Configuration
 # ==============================
 spring.datasource.url=jdbc:mysql://localhost:3306/license?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=user1
-spring.datasource.password=password@123
+spring.datasource.username=myuser
+spring.datasource.password=MyP@ssword123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ==============================
